--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -143,7 +143,7 @@
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
+            <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
@@ -159,16 +159,17 @@
         <Setter Property="Background" Value="#607D8B"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Style.Triggers>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="#24414E"/>
+                <Setter Property="Opacity" Value="1.2"/>
+            </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
-                <Setter Property="Foreground" Value="#FFFFFF"/>
-                <Setter Property="Background" Value="#34515E"/>
-                <Setter Property="Opacity" Value="1.2"/>
-            </Trigger>
+
         </Style.Triggers>
     </Style>
     <Style x:Key="Bottom" TargetType="Button" BasedOn="{StaticResource MaterialDesignFlatDarkBgButton}">
@@ -182,12 +183,12 @@
         <Setter Property="Background" Value="#607D8B"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="#FFFFFF"/>
-                <Setter Property="Background" Value="#34515E"/>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="#24414E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
+            <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
@@ -203,12 +204,12 @@
         <Setter Property="Background" Value="#607D8B"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="#FFFFFF"/>
-                <Setter Property="Background" Value="#34515E"/>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="#24414E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
+            <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
@@ -226,12 +227,12 @@
         <Setter Property="Background" Value="#607D8B"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="#FFFFFF"/>
-                <Setter Property="Background" Value="#34515E"/>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="#24414E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
+            <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
@@ -247,12 +248,12 @@
         <Setter Property="Background" Value="#607D8B"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="#FFFFFF"/>
-                <Setter Property="Background" Value="#34515E"/>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="#24414E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
+            <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
@@ -270,12 +271,12 @@
         <Setter Property="Background" Value="#607D8B"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="#FFFFFF"/>
-                <Setter Property="Background" Value="#34515E"/>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="#24414E"/>
                 <Setter Property="Opacity" Value="1.2"/>
             </Trigger>
-            <Trigger Property="IsFocused" Value="True">
+            <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#FFFFFF"/>
                 <Setter Property="Background" Value="#34515E"/>
                 <Setter Property="Opacity" Value="1.2"/>
