--- a/Display/Print/SlipBoard.xaml
+++ b/Display/Print/SlipBoard.xaml
@@ -37,20 +37,8 @@
                         </Border>
                         <TextBlock Text="-" TextAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="10,0,10,0"/>
                         <Border BorderThickness="1,1,1,0" BorderBrush="#000000" Width="42" Height="40">
-                            <Grid>
-                                <Path Stroke="#000000">
-                                    <Path.Data>
-                                        <PathGeometry>
-                                            <PathFigure StartPoint="0,39">
-                                                <LineSegment Point="40,0"/>
-                                            </PathFigure>
-                                        </PathGeometry>
-                                    </Path.Data>
-                                </Path>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{Binding SlipSEQ, FallbackValue=①}" FontSize="16" Width="16" Height="16" TextAlignment="Center" Margin="3,-18,0,0"/>
-                                    <TextBlock Text="{Binding SlipAll, FallbackValue=⑤}" FontSize="16" Width="16" Height="16" TextAlignment="Center" Margin="2,19,0,0"/>
-                                </StackPanel>
+                            <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="{Binding SlipSEQ, FallbackValue=①}" FontSize="24" TextAlignment="Center"/>
                             </Grid>
                         </Border>
                     </StackPanel>
